# openaura

./: .coderabbit.yaml  .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PYPI.md  README.md  SECURITY.md  aura.config.example.yml  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  release.yml  scorecard.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql.yml  release.yml  scorecard.yml
AURA (1)/: AURA Brandbook.html
brandbook/: README.md
openaura/: __init__.py  main.py  manifesto.py
openaura/agents/: __init__.py  _core.py  deps.py  gatherer.py  orchestrator.py  scorer.py  summarizer.py
openaura/connectors/: __init__.py  azuredevops.py  base.py  github.py
openaura/instructions/: aura.core.md  aura.md.example  manifesto.md
openaura/models/: __init__.py  brief.py  config.py  kpis.py  signals.py
openaura/output/: __init__.py  markdown.py
openaura/output/templates/: brief.md.j2
openaura/templates/: azure-pipelines.yml  github-actions-both.yml  github-actions-onmerge.yml  github-actions.yml
tests/: conftest.py  test_agents.py  test_azuredevops_connector.py  test_core.py  test_github_connector.py  test_main.py  test_models.py  test_orchestrator.py  test_output_markdown.py
tests/fixtures/azuredevops/: iteration_workitems.json  iterations_current.json  pipeline_runs.json  pipelines.json  pullrequests.json  wiql_blocked.json  wiql_completed.json  workitemsbatch_blocked.json  workitemsbatch_completed.json
tests/fixtures/github/: commits.json  issues_closed.json  issues_open_blocker.json  pulls_closed.json  releases.json
