[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "open-aura"
version = "0.1.0"
description = "Agentic Updates, Reviews, and Accountability — CI-native weekly project briefs powered by Pydantic AI."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "Open AURA contributors" }]
keywords = ["ai", "agents", "devops", "pydantic-ai", "ci", "reporting", "openai", "anthropic"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "pydantic-ai==1.85.0",
    "pydantic>=2.0,<3",
    "httpx>=0.27,<1",
    "typer>=0.12,<1",
    "pyyaml>=6.0,<7",
    "jinja2>=3.1,<4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "respx>=0.21",
    "ruff>=0.5",
    "mypy>=1.10",
    "bandit>=1.7",
    "build>=1.2",
    "hatchling>=1.24",
    "pip-audit>=2.7",
    "types-PyYAML",
]

[project.urls]
Homepage = "https://github.com/pradelgorithm/openaura"
Documentation = "https://github.com/pradelgorithm/openaura#readme"
Issues = "https://github.com/pradelgorithm/openaura/issues"
Source = "https://github.com/pradelgorithm/openaura"

[project.scripts]
aura = "openaura.main:app"

[tool.hatch.build.targets.wheel]
packages = ["openaura"]

[tool.hatch.build.targets.sdist]
include = [
    "openaura",
    "tests",
    "README.md",
    "MANIFESTO.md",
    "LICENSE",
    "SECURITY.md",
    "CONTRIBUTING.md",
    "CODE_OF_CONDUCT.md",
    "aura.config.example.yml",
    "pyproject.toml",
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["openaura", "tests"]
extend-exclude = ["brandbook", "output/briefs"]

[tool.ruff.lint]
# Semi-strict — strong core rules, docstring noise off, type-annotation noise off.
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "A",    # flake8-builtins
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    "RUF",  # Ruff-specific
    "S",    # bandit-lite (security)
    "PIE",  # flake8-pie
    "TID",  # flake8-tidy-imports
    "TRY",  # tryceratops
    "PL",   # pylint
    "PTH",  # flake8-use-pathlib
    "DTZ",  # naive datetimes
    "ARG",  # unused arguments
    "ASYNC", # async-specific issues
]
ignore = [
    "S101",     # assert use — fine in tests/dev
    "PLR0913",  # too many arguments — pragmatic
    "PLR0912",  # too many branches — pragmatic
    "PLR0915",  # too many statements — pragmatic
    "PLR2004",  # magic numbers — noisy
    "TRY003",   # long message in raise — we want descriptive errors
    "TRY300",   # consider else block — noisy
    "TRY301",   # abstract raise — pragmatic
    "TRY400",   # logger.exception — error is fine
    "N818",     # exception name must end in Error — AuraRunError etc. do
]
unfixable = ["B"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S", "B", "PLR", "SLF", "ARG", "ASYNC"]
"openaura/templates/**" = ["ALL"]
"openaura/output/templates/**" = ["ALL"]

[tool.ruff.lint.isort]
known-first-party = ["openaura"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
docstring-code-format = true

[tool.mypy]
python_version = "3.11"
strict = true
warn_unreachable = true
disallow_untyped_decorators = false
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra --strict-markers"

[tool.coverage.run]
source = ["openaura"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]

[tool.bandit]
exclude_dirs = ["tests"]
